syntax = "proto3";

package  calculator;

option java_package = "net.ontopsolutions.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message SquareRootRequest {
 int32 number= 1;
}

message SquareRootResponse{
  double number_root=1;
}

service CalculatorService {
  rpc sum(SumRequest) returns (SumResponse) {};

  //error handling
  //this RPC will throw an exception if the sent number is negative
  rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}


